--- a/style.css
+++ b/style.css
@@ -96,3 +96,156 @@ img{
         cursor: pointer;
     }
 }
+
+.adrian{
+    background-color: yellow;
+    width: 300px;
+    height: 300px;
+    border: 10 solid black;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#session4{
+    background-color: lightgrey;
+    width: 300px;
+    height: 300px;
+    border: 10 solid black;
+    position: relative;
+}
+#content{
+    position: absolute;
+    background-color: white;
+    
+}
+#rotate{
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: rotate(45deg);
+}
+
+/*grid*/
+.grid_container{
+    /*turn on grid layout */
+    display: grid;
+    /*fr: fractional unit*/ 
+    /*3 columns of equal width */
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: auto 1fr auto;
+    /*space*/
+    gap: 10px;
+    background-color: lightskyblue;
+    width: 50%;
+    height: 500px;
+}
+
+.grid_item{
+    background-color: lightgreen;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 5px;
+}
+.item1{
+    /*chiem tu cot 1 den cot 3 va tu hang 1 den hang 3 */
+    grid-column: 1 / 3;
+    
+}
+
+.item2{
+    grid-column: 1 /2;
+    
+}
+
+.item3{
+    grid-column: 2 / 4;
+    /*merge tu hang 2 den hang 4 */
+    grid-row: 2 / 4;
+
+    
+}
+
+#main-menu{ 
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    li{
+        padding: 10px;
+        /*background-color: blueviolet;*/
+    }
+
+    li:hover{
+        background-color: green;
+        cursor: pointer;
+    }
+}
+
+#sub-menu{
+    display: none;
+    list-style-type: none;
+    
+}
+
+#main-menu li:hover #sub-menu{
+    display: block;
+
+}
+
+#main-menu li{
+    position: relative;
+}
+
+#sub-menu{
+    position: absolute;
+    left: -10px;
+    top: 40px;
+}
+
+#sub-menu li:hover{
+    background-color: lightgreen;
+}
+
+#menu_2{
+    background-color: lightpink ;
+}
+
+.fade-in{
+    opacity: 0;
+    animation: aabc 5s forwards;
+}
+@keyframes aabc{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.slide-in{
+    position: relative;
+    left: -100%;
+    animation: abc 5s forwards;
+}
+
+.ROTATE{
+    animation: abc 5s infinite;
+}
+
+@keyframes abc{
+    0%{
+        transform: roate(0deg);
+    }
+    100%{
+        transform: rotate(100deg);
+    }
+}
+hi:hover{
+    transform: sacle(1.5);
+}
+#h1_hover{
+    transform: sacle(1) !important;
+}
